--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser": "^6.1.8",
     "@angular/platform-browser-dynamic": "^6.1.8",
     "@angular/router": "^6.1.8",
-    "@caiu/library": "^6.2.41",
+    "@caiu/library": "^6.2.53",
     "@ngrx/effects": "^6.0.1",
     "@ngrx/store": "^6.0.1",
     "core-js": "^2.5.4",
@@ -37,8 +37,8 @@
     "@angular/cli": "^6.2.3",
     "@angular/compiler-cli": "^6.1.8",
     "@angular/language-service": "^6.1.8",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "^2.8.9",
+    "@types/jasminewd2": "^2.0.5",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.3.0",
     "jasmine-core": "~2.99.1",
